k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
